gcc/testsuite/g++.dg/parse/elab1.C
namespace Name {

    typedef void *(*Function)( void *, int ); // { dg-error "previous declaration" }

    struct Foo {
      struct Function xyz[5]; // { dg-error "" }
    };

}
